--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to my own github repository .</h1>
-    <p>This is a sample HTML file.</p>
-    <pre>Let's say hello to my new start with github by myself.</pre>
+    <h2>This is the master2 page.</h2>
+    <p>Hope that i can master github and use it smoothly.</p>
+    <span>Welcome to class of DevOp by mister Sochea.</span>
 </body>
 </html>
